--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,7 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -48,4 +49,7 @@ a {
 ul {
   list-style-type: none;
   display:flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
