--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -61,6 +61,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-top: 10px;
 }
 
 button.cancel {
@@ -73,4 +74,6 @@ button.cancel {
   font-weight: bold;
   font-size: larger;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
