--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,9 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  padding:15px;
+  padding:16px;
   display: flex;
-  gap: 10px;
+  gap: 16px;
 }
 
 .icon {
@@ -61,7 +61,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
-  margin-top: 10px;
+  margin-top: 16px;
 }
 
 button.cancel {
@@ -73,7 +73,8 @@ button.cancel {
 .header {
   font-weight: bold;
   font-size: larger;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
