--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -38,6 +38,7 @@ a {
 
 .header {
   display: flex;
+  flex: 1;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -46,10 +47,12 @@ a {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  background-color: #eeeeee;
 }
 
 .content {
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
 }
