Add flex to ul and add gap between each item and change link color to gray

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -30,10 +30,13 @@ input {
 
 ul {
   list-style: none;
+  display: flex;
+  gap: 10px;
 }
 
 a {
   text-decoration: none;
+  color: rgb(73, 73, 73);
 }
 
 .header {
