--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -18,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -43,6 +44,7 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  padding-right: 25px;
 }
 
 .footer {
@@ -50,11 +52,13 @@ a {
   align-items: flex-end;
   justify-content: space-between;
   background-color: #eeeeee;
+  padding-right: 25px;
 }
 
 .content {
   display: flex;
   flex: 1;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
