--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,11 +27,15 @@ body {
   width: 300px;
   background: royalblue;
   display: flex;
-  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.main-container {
+  display: flex;
+  flex: 1;
 }
