--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -30,6 +30,8 @@ body {
   width: 300px;
   background: royalblue;
   display: flex;
+  flex-shrink: 0;
+  font-size: 24px;
 }
 
 .card {
@@ -43,4 +45,15 @@ body {
 .main-container {
   display: flex;
   flex: 1;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
