Add flex to ul and adjust padding and gap

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -49,8 +49,11 @@ body {
 
 ul {
   list-style: none;
+  display: flex;
+  flex-direction: column;
   margin: 0;
-  padding: 0;
+  padding: 10px;
+  gap: 16px;
 }
 
 a {
