--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -38,8 +38,8 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  display: flex;
-  flex: 1;
+  width: 300px;
+  padding: 16px;
 }
 
 .main-container {
@@ -52,11 +52,18 @@ ul {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 10px;
+  padding: 16px;
   gap: 16px;
 }
 
 a {
   text-decoration: none;
   color: white;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 32px;
 }
